edited registration form

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,13 +18,13 @@
         <input type="text" placeholder="Full Name" name="fn" id="fn" required>
 
         <label for="psw"><b>Password</b></label>
-        <input type="password" placeholder="Enter" name="psw" id="psw" required>
+        <input type="password" placeholder="Enter Password" name="psw" id="psw" required>
 
         <label for="cpsw"><b>confirm Password</b></label>
-        <input type="password" placeholder="confirm" name="cpsw" id="cpsw" required> 
+        <input type="password" placeholder="confirm password" name="cpsw" id="cpsw" required> 
         <hr>
 
-        <button type="submit">Register</button> 
+        <button class="registerbtn" type="submit" >Register</button> 
 
    
     </form>  </div>
